  plugin. Thanks to Klaus-Peter Berg for reporting that this was still
  broken.

  Fix bug 1638659 - Deadlock in SleeperImplementation. Thanks to
  Bruce Adams for the report.

  Change the console's monitoring of changes to files so that it no
  longer assumes system time matches the file system time. This should
  fix some subtle bugs, particularly for file systems on shared storage.


The Grinder 3.0-beta32
----------------------

  Fix bug 1577573 - valueFromBodyURI() could be optimised. TCPProxy
  recorded scripts use this method, and its previous inefficiency
  caused beta 30 and beta 31 to be overly demanding of CPU and memory.
  Thanks to Andy Kim for the original bug report.

  Fix bug 1579641 - Exceptions thrown by HTTPRequest.processResponse()
  were not logged correctly. Thanks to Richard Taylor for the report.

  Fix bug 1585912 - jdbc.py incorrectly indented. Thanks to Coey
  (cminear at users.sourceforge.net) for the report.

  Fix bug 1593169 - AssertionError thrown in instrumentation code. Thanks
  to Peter Wickersham and Matt Schlobohm for the report and analysis.

  Added MQ library and example code from Phillip Mayhew to the contrib
  directory.

  Fix bug 1592664 - InterruptedException when grinder.processes > 1.
  This is due to JRE badness that I've had to work around. Thanks to
  Stephane Nicoll and whoever opened the bug for the reports.

  Fix bug 1604111 - Deadlock on shutdown (TCPProxy). Thanks to Graham
  Sweetland for his assistance in reproducing this problem.

  Added an initial version of the console API. This API is under
  development and not stable. It will grow and change over the next
  few releases. Its not ready for mass consumption yet, but advanced
  users can check out the API (net.grinder.console.client.ConsoleClient).


The Grinder 3.0-beta31
----------------------

  Fix bug 1199086 - Distribution to multiple agents hangs. Thanks to
  capwin@sourceforge.net for analysing the problem.
