@@ -162,7 +162,7 @@
   </xs:complexType>
 
   <xs:complexType name="RequestType">
-  	<xs:sequence>
+    <xs:sequence>
       <xs:element name="comment" type="tns:CommentType"
              minOccurs="0" maxOccurs="unbounded"/>
       <xs:element name="time" type="xs:dateTime" />
@@ -261,7 +261,7 @@
         <xs:element name="binary" type="tns:BinaryBodyType" />
         <xs:element name="file" type="tns:FileNameBodyType" />
         <xs:element name="form" type="tns:FormBodyType" />
-        <xs:element name="string" type="tns:StringBodyType" />
+        <xs:element name="escaped-string" type="tns:EscapedStringBodyType" />
       </xs:choice>
     </xs:sequence>
   </xs:complexType>
@@ -292,7 +292,7 @@
   <xs:simpleType name="CommentType">
     <xs:restriction base="xs:string" />
   </xs:simpleType>
-  <xs:simpleType name="StringBodyType">
+  <xs:simpleType name="EscapedStringBodyType">
     <xs:restriction base="xs:string">
       <xs:whiteSpace value="preserve" />
     </xs:restriction>
